# aio-remeha-modbus

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: release-drafter.yml
.github/workflows/: autolabeler.yaml  ci.yaml  coverage.yaml  pytest.yaml  release-drafter.yaml  release.yaml
docs/source/: aio_remeha_modbus.api.rst  aio_remeha_modbus.helpers.rst  aio_remeha_modbus.rst  conf.py  index.rst  modules.rst
scripts/: devenv
src/aio_remeha_modbus/: __init__.py
src/aio_remeha_modbus/api/: __init__.py  api.py  climate_zone.py  config.py  const.py  errors.py  registers.py  schedule.py
src/aio_remeha_modbus/helpers/: __init__.py  gtw08.py  modbus.py
tests/: __init__.py  conftest.py  smoke_test.py
tests/api/: test_api.py  test_appliance.py  test_climate_zone.py  test_schedule.py
tests/helpers/: registers.py  test_gtw08.py  test_modbus.py  test_validation.py
tests/util/: __init__.py  registers.py
