[project]
name = "aio-remeha-modbus"
version = "0.1.0"
description = "Async I/O modbus API for Remeha appliances"
readme = "README.md"
authors = [
    { name = "houthacker", email = "houthacker@pm.me" }
]
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "pydantic>=2.13.4",
    "pymodbus>=3.13.1",
    "python-dateutil>=2.9.0.post0",
]
license = "LGPL-3.0-or-later"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/houthacker/aio-remeha-modbus"
Issues = "https://github.com/houthacker/aio-remeha-modbus/issues"

[project.scripts]
aio-remeha-modbus = "aio_remeha_modbus:main"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
